<resources>
    <string name="app_name">Meet&amp;Go</string>

    <!--On boarding screen-->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="slide_header_1">Получай задания</string>
    <string name="slide_header_2">Выполняй вместе с партнёром</string>
    <string name="slide_header_3">Пользуйся на любом устройстве</string>
    <string name="slide_description_1">Расскажи нам о своих интересах и мы дадим тебе соответствующие задания. Чем тщательнее выберешь категории, тем круче задание получишь!</string>
    <string name="slide_description_2">Выполнять задания нужно со вторым человеком. Можно как с друзьями, так и со второй половинкой.</string>
    <string name="slide_description_3">Получи задание на компьютере, а закончи на телефоне! Приложение доступно в Web-версии и на ОС Android.</string>
    <string name="on_boarding_image">On boarding image</string>

    <!--Login screen-->
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_account">No account yet? Create one</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="login_image">Login image</string>
    <string name="password_icon">Password icon</string>
    <string name="account_icon">Account icon</string>
    <string name="username_not_found_error">Username not found</string>
    <string name="wrong_password_error">Wrong password</string>

    <!--Registration screen-->
    <string name="sign_up">Sign up</string>
    <string name="registration_image">Registration image</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already registered? Login here</string>
    <string name="password_help">Password must contain 1 character, 1 digit</string>
    <string name="gender_icon">Gender icon</string>
    <string name="first_name_icon">First name icon</string>
    <string name="last_name_icon">Last name icon</string>
    <string name="username_icon">Username icon</string>
    <string name="email_icon">Email icon</string>
    <string name="confirm_password_icon">Confirm password icon</string>
    <string name="check_password_icon">Password confirmed</string>
    <string name="existing_username_error">Username already registered :(</string>
    <string name="existing_email_error">Email already registered :(</string>
    <string name="no_network_error">Please check your internet connection</string>
    <string name="unexpected_error">Unexpected error :(. Please inform developer</string>
    <string name="server_error">Unexpected server error :(. Please inform developer</string>
    <string name="server_unavailable_error">Server unavailable. Please inform developer</string>

    <!--Tags screen-->
    <string name="select_tags">Select tags</string>
    <string name="tags_description">Расскажи нам немного о себе. Выбери категории, которые тебе нравятся больше всего. Чем тщательнее выберешь, тем круче задания получишь!</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Another</item>
    </string-array>



    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="view_task">View task</string>
    <string name="grade_task">Grade task</string>
    <string name="settings">Settings</string>
    <string name="change_partner">Change partner</string>
    <string name="new_task">New task</string>
</resources>
