<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    app:startDestination="@id/homeScreen">

    <fragment
        android:id="@+id/homeScreen"
        android:name="io.nemiron.meetgo.view.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_gradeTask"
            app:destination="@id/gradeTaskScreen" />
        <action
            android:id="@+id/action_homeScreen_to_newTask"
            app:destination="@id/newTaskScreen" />
    </fragment>

    <fragment
        android:id="@+id/gradeTaskScreen"
        android:name="io.nemiron.meetgo.view.ui.home.grade_task.GradeTaskFragment"
        android:label="@string/grade_task"
        tools:layout="@layout/fragment_grade_task" />

    <fragment
        android:id="@+id/newTaskScreen"
        android:name="io.nemiron.meetgo.view.ui.new_task.NewTaskFragment"
        android:label="@string/new_task"
        tools:layout="@layout/fragment_new_task" />
</navigation>